# ai.rs

./: AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  mise.toml  plan.md
.github/workflows/: ci.yaml
crates/agent/: Cargo.toml
crates/agent/src/: agent.rs  agent_loop.rs  error.rs  lib.rs  types.rs
crates/agent/src/harness/: agent_harness.rs  messages.rs  mod.rs  prompt_templates.rs  skills.rs  system_prompt.rs  types.rs
crates/agent/src/harness/compaction/: branch_summary.rs  mod.rs  planning.rs  utils.rs
crates/agent/src/harness/env/: mod.rs  nodejs.rs
crates/agent/src/harness/session/: jsonl_repo.rs  jsonl_storage.rs  memory_repo.rs  memory_storage.rs  mod.rs  repo_utils.rs
crates/agent/src/harness/utils/: mod.rs  shell_output.rs  truncate.rs
crates/agent/tests/: agent.rs  agent_harness.rs  agent_loop.rs  branch_summary.rs  compaction_planning.rs  compaction_utils.rs  harness_messages.rs  node_env.rs  prompt_templates.rs  session.rs  skills.rs  truncate.rs
crates/ai/: Cargo.toml  PORTING.md  README.md
crates/ai/src/: agent.rs  agent_error.rs  agent_loop.rs  agent_types.rs  api_registry.rs  chat_completions.rs  completions.rs  embeddings.rs  env_api_keys.rs  error.rs  event_stream.rs  graph.rs  image_models.generated.json  image_models.rs  images.rs  images_api_registry.rs  lib.rs  models.generated.json  models.rs  oauth.rs  provider.rs  session_resources.rs  stream.rs  test_env.rs  types.rs
crates/ai/src/clients/: azure_openai.rs  mod.rs  ollama.rs  openai.rs
crates/ai/src/providers/: anthropic.rs  azure_openai_responses.rs  cloudflare.rs  faux.rs  github_copilot.rs  github_copilot_headers.rs  google_shared.rs  mistral.rs  mod.rs  openai.rs  openai_codex_responses.rs  openai_completions.rs  openai_images.rs  openai_prompt_cache.rs  openai_responses.rs  openrouter.rs  register_builtins.rs  simple_options.rs  transform_messages.rs
crates/ai/src/providers/images/: mod.rs  openrouter.rs  register_builtins.rs
crates/ai/src/utils/: diagnostics.rs  event_stream.rs  hash.rs  headers.rs  http.rs  json.rs  mod.rs  overflow.rs  sanitize.rs  sanitize_unicode.rs  sse.rs  time.rs  transform_messages.rs  uri.rs  validation.rs
crates/ai/tests/: agent.rs  local_4141.rs  public_api.rs
examples/: CLAUDE.md
examples/azure_openai_chat_completions/: Cargo.toml
examples/azure_openai_chat_completions/src/: main.rs
examples/chat_completions_streaming/: Cargo.toml
examples/chat_completions_streaming/src/: main.rs
examples/chat_completions_streaming_with_cancellation_token/: Cargo.toml
examples/chat_completions_streaming_with_cancellation_token/src/: main.rs
examples/chat_completions_tool_calling/: Cargo.toml
examples/chat_completions_tool_calling/src/: main.rs
examples/chat_console/: Cargo.toml
examples/chat_console/src/: main.rs
examples/clients_dynamic_runtime/: Cargo.toml
examples/clients_dynamic_runtime/src/: main.rs
examples/graph_example/: Cargo.toml
examples/graph_example/src/: main.rs
examples/openai_chat_completions/: Cargo.toml
examples/openai_chat_completions/src/: main.rs
examples/openai_embeddings/: Cargo.toml
examples/openai_embeddings/src/: main.rs
examples/react_agent/: Cargo.toml
examples/react_agent/src/: main.rs
examples/react_agent_graph/: Cargo.toml
examples/react_agent_graph/src/: main.rs
examples/simple-coding-agent/: Cargo.toml  README.md
examples/simple-coding-agent/src/: main.rs
