[workspace]
resolver = "2"

members = [
    "crates/*"
]

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["Prabir Shrestha <mail@prabir.me>"]
repository = "https://github.com/prabirshrestha/ai.rs"

[workspace.dependencies]
ai = { path = "crates/ai" }
async-stream = "0.3.6"
async-trait = "0.1.85"
futures = "0.3.31"
reqwest = { version = "0.13.0", features = ["json", "stream"], default-features = false }
regex = "1.11.1"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0.9"
tokio = { version = "1.43.0", features = ["io-util", "macros", "rt", "rt-multi-thread", "sync", "time"] }
tokio-util = "0.7.13"
