[package]
name = "agent"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Rust port of the pi agent package"
repository.workspace = true

[dependencies]
ai.workspace = true
async-trait.workspace = true
futures.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tokio-util.workspace = true
uuid.workspace = true
