[package]
name = "ai"
version = "0.2.10"
edition = "2021"
authors = ["Prabir Shrestha <mail@prabir.me>"]
license = "MIT"
description = "AI"
repository = "https://github.com/prabirshrestha/ai.rs"
readme = "../../README.md"

[dependencies]
async-stream = "0.3.6"
async-trait = "0.1.85"
derive_builder = "0.20.2"
dyn-clone = "1.0.17"
futures = "0.3.31"
reqwest = { version = "0.12.12", features = ["json", "stream"], default-features = false }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.217", features = ["serde_derive"] }
serde_json = "1.0.135"
thiserror = "2.0.9"
time = { version = "0.3.37", features = ["parsing"] }
tokio = "1.43.0"
tokio-util = "0.7.13"

[dev-dependencies]
httpmock = "0.7.0"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }

[features]
default = [ "azure_openai_client", "openai_client", "rustls_tls"]
ollama_client = []
openai_client = []
azure_openai_client = []
native_tls = ["reqwest/native-tls"]
rustls_tls = ["reqwest/rustls-tls"]
