[package]
name = "ai"
version = "0.3.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Rust port of the pi ai package"
repository.workspace = true
readme = "../../README.md"

[dependencies]
async-stream.workspace = true
futures.workspace = true
reqwest.workspace = true
regex.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[dev-dependencies]
tokio.workspace = true
