[package]
name = "ai"
version = "0.3.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Simple to use LLM library for Rust with streaming, tool calling, OAuth helpers, and a lightweight agent loop"
repository.workspace = true
readme = "README.md"

[dependencies]
async-trait.workspace = true
async-stream.workspace = true
base64.workspace = true
futures.workspace = true
reqwest.workspace = true
regex.workspace = true
ring.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[dev-dependencies]
tokio.workspace = true
