[package]
name = "react_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
ai = { path = "../../crates/ai" }
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1"
futures = "0.3"