[package]
name = "simple-coding-agent"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
ai.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["io-std", "process"] }
